--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <title>Tommi Christensen</title>
+    </head>
     <body>
         <h1>Tommi Christensen</h1>
         <h3>Freelance Full Stack Developer</h3>
