--- a/strat-hawk/bookings.html
+++ b/strat-hawk/bookings.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <title>My Bookings - Strat Hawk</title>
+    </head>
     <body>
         <h1>Strat Hawk</h1>
         <h2>My Bookings</h2>
