--- a/strat-hawk/destinations.html
+++ b/strat-hawk/destinations.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <title>Destinations - Strat Hawk</title>
+    </head>
     <body>
         <h1>Strat Hawk</h1>
         <h2>Destinations</h2>
