--- a/strat-hawk/index.html
+++ b/strat-hawk/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <title>Strat Hawk</title>
+    </head>
     <body>
         <h1>Strat Hawk</h1>
         <h2>Plan</h2>
