--- a/strat-hawk/signup.html
+++ b/strat-hawk/signup.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <title>Signup - Strat Hawk</title>
+    </head>
     <body>
         <h1>Strat Hawk</h1>
         <h2>Signup</h2>
