--- a/profile/profile.html
+++ b/profile/profile.html
@@ -7,9 +7,22 @@
         <h1>Tommi Christensen</h1>
         <h3>Freelance Full Stack Developer</h3>
         <h5>Lucerne, Switzerland</h5>
+        <p>
+            Freelance Java Full Stack Developer with 3+ years of development experience. Comprehensive knowledge in developing web applications that consume REST API using Angular, HTML, CSS, Bootstrap, Spring Boot, MySQL
+        </p>
         <h2>About</h2>
         <h2>Skills</h2>
         <h2>Experience</h2>
+        <p>
+            Associate Developer | TrendX - Mar 2019 to Feb 2020
+        </p>
+        <p>
+            Developed end to end web application with technology stack of Angular, Bootstrap, Spring Boot, Spring RESTful Web Services, Spring Data JPA, MySQL and Microservices.
+        </p>
         <h2>Education</h2>
+        <p>
+            Eidgenössische Technische Hochschule (ETH) Zürich | Bachelor or Computer Science | 2014 to 2017
+        </p>
+        <p>Implemented Web Application for Crime Management</p>
     </body>
 </html>
