strat hawk navigation links

--- a/strat-hawk/signup.html
+++ b/strat-hawk/signup.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <h1>Strat Hawk</h1>
+        <a href="index.html">Home</a> 
+        <a href="bookings.html">My Bookings</a> 
+        <a href="destinations.html">Destinations</a> 
+        <a href="login.html">Login</a> 
+        <a href="signup.html">Signup</a>
         <h2>Signup</h2>
     </body>
 </html>
