--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,6 +4,7 @@
         <title>Tommi Christensen</title>
     </head>
     <body>
+        <img src="images/profile.png" width="10%">
         <h1>Tommi Christensen</h1>
         <h3>Freelance Full Stack Developer</h3>
         <h5>Lucerne, Switzerland</h5>
