--- a/strat-hawk/index.html
+++ b/strat-hawk/index.html
@@ -11,5 +11,6 @@
         <a href="login.html">Login</a> 
         <a href="signup.html">Signup</a>
         <h2>Plan</h2>
+        <img src="https://images.pexels.com/photos/358319/pexels-photo-358319.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="25%">
     </body>
 </html>
