destination for strat hawk

--- a/strat-hawk/destinations.html
+++ b/strat-hawk/destinations.html
@@ -11,5 +11,9 @@
         <a href="login.html">Login</a> 
         <a href="signup.html">Signup</a>
         <h2>Destinations</h2>
+        <h4>Germany</h4>
+        <img src="images/germany.jpg" width="20%">
+        <h4>Australia</h4>
+        <img src="images/australia.jpeg" width="20%">
     </body>
 </html>
