--- a/profile/profile.html
+++ b/profile/profile.html
@@ -8,11 +8,16 @@
         <h1>Tommi Christensen</h1>
         <h3>Freelance Full Stack Developer</h3>
         <h5>Lucerne, Switzerland</h5>
+        <h2>About</h2>
         <p>
             Freelance Java Full Stack Developer with 3+ years of development experience. Comprehensive knowledge in developing web applications that consume REST API using Angular, HTML, CSS, Bootstrap, Spring Boot, MySQL
         </p>
-        <h2>About</h2>
         <h2>Skills</h2>
+        <ul>
+            <li>Angular</li>
+            <li>Bootstrap</li>
+            <li>Spring Boot</li>
+        </ul>
         <h2>Experience</h2>
         <p>
             Associate Developer | TrendX - Mar 2019 to Feb 2020
