--- a/strat-hawk/bookings.html
+++ b/strat-hawk/bookings.html
@@ -11,5 +11,28 @@
         <a href="login.html">Login</a> 
         <a href="signup.html">Signup</a>
         <h2>My Bookings</h2>
+        <table border="1" cellspacing="0" cellpadding="10">
+            <tr>
+                <th>Flight</th>
+                <th>Passenger Name</th>
+                <th>Departure</th>
+                <th>Arrival</th>
+                <th>Seat</th>
+            </tr>
+            <tr>
+                <td>SH288</td>
+                <td>Mr. Tommi Christensen</td>
+                <td>Berlin 10/28/20 21:00</td>
+                <td>Sydney 10/31/20 08:05</td>
+                <td>28C</td>
+            </tr>
+            <tr>
+                <td>SH245</td>
+                <td>Mr. Tommi Christensen</td>
+                <td>Sydney 11/10/20 22:25</td>
+                <td>Berlin 11/11/20 12:20</td>
+                <td>12A</td>
+            </tr>
+        </table>
     </body>
 </html>
