--- a/strat-hawk/index.html
+++ b/strat-hawk/index.html
@@ -12,5 +12,48 @@
         <a href="signup.html">Signup</a>
         <h2>Plan</h2>
         <img src="images/flight.jpeg" width="25%">
+        <h2>Recommended Flights</h2>
+        <table cellpadding="10" border="1" cellspacing="0">
+            <tr>
+                <th>Flight</th>
+                <th>Departure</th>
+                <th>Duration</th>
+                <th>Arrival</th>
+                <th>Cost</th>
+                <th>Book</th>
+            </tr>
+            <tr>
+                <td>SH288</td>
+                <td>
+                    Berlin (BER)<br>
+                    21:00<br>
+                    Wed 28 Oct 2020
+                </td>
+                <td>49 hrs 5 mins</td>
+                <td>
+                    Sydney (SYD)<br>
+                    08:05<br>
+                    Sat 31 Oct 2020
+                </td>
+                <td>$3447</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>SH245</td>
+                <td>
+                    Sydney (SYD)<br>
+                    22:25<br>
+                    Tue 10 Nov 2020
+                </td>
+                <td>23 hrs 55 mins</td>
+                <td>
+                    Berlin (BER)<br>
+                    12:20<br>
+                    Wed 11 Nov 2020
+                </td>
+                <td>$801</td>
+                <td></td>
+            </tr>
+        </table>
     </body>
 </html>
