--- a/strat-hawk/login.html
+++ b/strat-hawk/login.html
@@ -11,5 +11,12 @@
         <a href="login.html">Login</a> 
         <a href="signup.html">Signup</a>
         <h2>Login</h2>
+        <form action="index.html">
+            <label for="email">Email</label><br>
+            <input type="text" name="email" id="email"><br><br>
+            <label id="password">Password</label><br>
+            <input type="password" name="password" id="password"><br><br>
+            <input type="submit" value="Login">
+        </form>
     </body>
 </html>
