--- a/strat-hawk/index.html
+++ b/strat-hawk/index.html
@@ -41,15 +41,15 @@
             <tr>
                 <td>SH288</td>
                 <td>
-                    Berlin (BER)<br>
-                    21:00<br>
-                    Wed 28 Oct 2020
+                    <div>Berlin (BER)</div>
+                    <div>21:00</div>
+                    <div>Wed 28 Oct 2020</div>
                 </td>
                 <td>49 hrs 5 mins</td>
                 <td>
-                    Sydney (SYD)<br>
-                    08:05<br>
-                    Sat 31 Oct 2020
+                    <div>Sydney (SYD)</div>
+                    <div>08:05</div>
+                    <div>Sat 31 Oct 2020</div>
                 </td>
                 <td>$3447</td>
                 <td>
@@ -61,15 +61,15 @@
             <tr>
                 <td>SH245</td>
                 <td>
-                    Sydney (SYD)<br>
-                    22:25<br>
-                    Tue 10 Nov 2020
+                    <div>Sydney (SYD)</div>
+                    <div>22:25</div>
+                    <div>Tue 10 Nov 2020</div>
                 </td>
                 <td>23 hrs 55 mins</td>
                 <td>
-                    Berlin (BER)<br>
-                    12:20<br>
-                    Wed 11 Nov 2020
+                    <div>Berlin (BER)</div>
+                    <div>12:20</div>
+                    <div>Wed 11 Nov 2020</div>
                 </td>
                 <td>$801</td>
                 <td>
