--- a/strat-hawk/login.html
+++ b/strat-hawk/login.html
@@ -13,9 +13,9 @@
         <h2>Login</h2>
         <form action="index.html">
             <label for="email">Email</label><br>
-            <input type="text" name="email" id="email"><br><br>
+            <input type="text" name="email" id="email" required><br><br>
             <label id="password">Password</label><br>
-            <input type="password" name="password" id="password"><br><br>
+            <input type="password" name="password" id="password" required><br><br>
             <input type="submit" value="Login">
         </form>
     </body>
